# secom-mlops

./: .gitignore  DASHBOARD.md  HOW_TO.md  README.md  SCENARIO.md  mise.toml  pyproject.toml
airflow/dags/: build_periodic_training_dataset.py  cleanup_failed_candidate_alias.py  create_fixed_reference_drift_baseline.py  deploy_candidate_to_canary.py  evaluate_candidate_serving_snapshot_gate.py  fixed_reference_drift_evaluator.py  inspect_deployment_requests.py  inspect_model_gateway_traffic_policy.py  promote_candidate_to_release.py  record_serving_candidate_deployment_request.py  refresh_label_maturity_metrics.py  rollback_candidate_canary.py  rollback_release_deployment.py  set_model_gateway_canary_traffic.py  train_candidate_from_offline_point_in_time_features.py
container/: README.md  docker-compose.yml
container/dockerfiles/: airflow.Dockerfile  kafka.Dockerfile  mlflow.Dockerfile  nginx.Dockerfile  python-app.Dockerfile
docs/: dag.drawio  monitoring-io-live-quality.drawio  monitoring-io.drawio  system.drawio
fdc-feature-assembler/: Dockerfile  README.md  build.gradle  build.sh  settings.gradle
fdc-feature-materializer/: Dockerfile  README.md  build.gradle  build.sh  settings.gradle
feature-raw-archiver/: Dockerfile  README.md  build.gradle  settings.gradle
feature-snapshot-archiver/: Dockerfile  README.md  build.gradle  settings.gradle
label-archiver/: Dockerfile  README.md  build.gradle  settings.gradle
prediction-log-archiver/: Dockerfile  README.md  build.gradle  settings.gradle
secom_mlops_common/: __init__.py  logging.py
(+203 files in other folders)
